--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top.png);
+  background-image: url(https://github.com/calm0123/calm.portfolio/blob/master/gahag-0083461077.jpg?raw=true);
   background-size: cover;
   color: white;
   text-align: center;
