--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,11 +11,15 @@ a {
   text-decoration: none;
 }
 
+
+
 .container {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
+
+/*トップページ*/
 
 .top-wrapper {
   padding: 180px 0 100px 0;
@@ -86,7 +90,6 @@ header {
 
 .logo {
   width: 124px;
-  margin-top: 20px;
 }
 
 .header-left {
