--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,31 +13,32 @@ a {
 
 
 
-.container {
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 /*トップページ*/
 
 .top-wrapper {
-  padding: 180px 0 100px 0;
+  padding: 180px 0 130px 0;
   background-image: url(https://github.com/calm0123/calm.portfolio/blob/master/gahag-0083461077.jpg?raw=true);
   background-size: cover;
   color: white;
   text-align: center;
 }
 
+.container {
+  width: 100%;
+  padding: 0 15px;
+  margin:0 0 0 30px
+}
+
 .top-wrapper h1 {
   opacity: 0.7;
-  font-size: 45px;
+  font-weight: bold;
+  font-size: 60px;
   letter-spacing: 5px;
 }
 
 .top-wrapper p {
   opacity: 0.7;
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 40px;
 }
 
