--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,15 +54,6 @@ a {
   background-color: #239b76;
 }
 
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: #55acee;
-}
-
 .btn {
   padding: 8px 24px;
   color: white;
@@ -100,6 +91,7 @@ header {
 .header-right {
   float: right;
   margin-right: -25px;
+  height: 65px;
 }
 
 .header-right a {
