--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,16 +22,46 @@ a {
   color: white;
   text-align: center;
 }
-
+/*calm,about me,portfolio,contactにかかっている*/
 .logo {
   padding: 10px 20px;
+  width: 124px;
 }
 
+/*calm左寄せ*/
+.header-left {
+  float: left;
+}
+
+/*ヘッダー右寄せ*/
+.header-right {
+  float: right;
+  margin-right: -25px;
+  height: 65px;
+}
+
+/*右側画像外側のリンクの内容*/
+.header-right a {
+  line-height: 65px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+/*右側画像外側のリンクの内容載せた時*/
+.header-right a:hover {
+  background-color: rgba(255,255,255,0.3);
+}
+
+/*不明*/
 .container {
   width: 100%;
   padding: 0 15px;
   margin:0 0 0 30px
 }
+
+/*ロゴ*/
 
 .top-wrapper h1 {
   opacity: 0.7;
@@ -40,24 +70,29 @@ a {
   letter-spacing: 5px;
 }
 
+/*誰もが～*/
 .top-wrapper p {
   opacity: 0.7;
   font-size: 20px;
   margin-bottom: 40px;
 }
 
+/*問い合わせ*/
 .btn-wrapper {
   text-align: center;
 }
 
+/*問い合わせの中*/
 .btn-wrapper p {
   margin-bottom: 20px;
 }
 
+/*問い合わせの色*/
 .signup {
   background-color: #239b76;
 }
 
+/*問い合わせ全般*/
 .btn {
   padding: 8px 24px;
   color: white;
@@ -67,13 +102,12 @@ a {
   text-align: center;
 }
 
+/*問い合わせ乗せた時*/
 .btn:hover {
   opacity: 1;
 }
 
-.fa {
-  margin-right: 5px;
-}
+/*ヘッダー全体・固定*/
 
 header {
   height: 65px;
@@ -84,32 +118,9 @@ header {
   z-index: 10;
 }
 
-.logo {
-  width: 124px;
-}
 
-.header-left {
-  float: left;
-}
 
-.header-right {
-  float: right;
-  margin-right: -25px;
-  height: 65px;
-}
 
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
-  float: left;
-  transition: all 0.5s;
-}
-
-.header-right a:hover {
-  background-color: rgba(255,255,255,0.3);
-}
 
 .lesson-wrapper {
   height: 580px;
