--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,11 +65,11 @@ header {
   background-color: rgba(255,255,255,0.3);
 }
 
-/*不明*/
+/*トップ画像の文字*/
 .container {
-  width: 100%;
+  width: 50%;
   padding: 0 15px;
-  margin:0 0 0 30px
+  margin-right: auto;
 }
 
 /*ロゴ*/
