--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,7 +83,7 @@ header {
 /*誰もが～*/
 .top-wrapper p {
   opacity: 0.7;
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 40px;
 }
 
@@ -94,34 +94,18 @@ header {
   padding: 0.5em 1em 0.3em;
   position: relative;
   color: white;
-  border: solid 2px #990000;
+  border: solid 2px white;
   border-radius: 5px;
   background-color: transparent;
   cursor: pointer;
+  opacity: 0.7;
 }
-
-.Button-style:before {
-  background-color: white;
-  opacity: 0.8;
-  border-radius: 5px;
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 5px;
-  top: 5px;
-  z-index: -1;
-}
-
-.Button-style:hover {
-  background-color: rgba(255,255,255,0.3);
-}
-
 
 
 /*問い合わせ乗せた時*/
 .Button-style:hover {
   opacity: 1;
+  background-color: rgba(255,255,255,0.3);
 }
 
 
