--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,10 +108,15 @@ header {
   background-color: rgba(255,255,255,0.3);
 }
 
-.far {
+/*about移行アイコン*/
+.fa-arrow-alt-circle-down {
   margin-right: 5px;
+  color: white;
 }
 
+.down {
+  display: inline-block;
+}
 
 
 .lesson-wrapper {
