--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,9 +96,7 @@ header {
   color: white;
   border: solid 2px white;
   border-radius: 5px;
-  background-color: transparent;
   cursor: pointer;
-  opacity: 0.7;
   display: inline-block;
 }
 
@@ -117,6 +115,7 @@ header {
 
 .down {
   display: inline-block;
+  height: 18px;
 }
 
 
