--- a/stylesheet.css
+++ b/stylesheet.css
@@ -120,6 +120,29 @@ header {
 }
 
 
+/*about画像*/
+.frame {
+	display: inline-block;
+	position: relative;
+  width: 35%;
+  margin-right: auto;
+  
+}
+.frame:after {
+	position: absolute;
+	display: block;
+	content: "";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+	transform: rotate(3deg); /* 回転させる */
+	background: #fff;
+	z-index: -1;
+}
+
+
 .lesson-wrapper {
   height: 580px;
   padding-bottom: 80px;
