--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,11 @@ li {
   margin: 0 auto;
 }
 
+.img-calm {
+  margin: 0 0;
+}
+
+
 .top-wrapper {
   padding: 180px 0 100px 0;
   background-image: url(top.png);
