--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,10 +27,10 @@ li {
   margin: 0 0;
 }
 
-
+/*トップ画面全体。一番外枠*/
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top.png);
+  background-image: url(https://github.com/calm0123/calm.portfolio/blob/master/gahag-0083461077.jpg?raw=true);
   background-size: cover;
   color: white;
   text-align: center;
