--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,13 +23,14 @@ li {
   margin: 0 auto;
 }
 
+/*本文のサイズ*/
 .container-top {
   width: 50%
 }
 
 /*トップ画面全体。一番外枠*/
 .top-wrapper {
-  padding: 180px 0 100px 0;
+  padding: 180px 0 150px 0;
   background-image: url(https://github.com/calm0123/calm.portfolio/blob/master/gahag-0083461077.jpg?raw=true);
   background-size: cover;
   color: white;
