--- a/stylesheet.css
+++ b/stylesheet.css
@@ -252,26 +252,15 @@ footer {
 }
 
 /*aboutのデザイン*/
-.tape-box{
-  margin: 1em 0;
+.loose-leaf{
+  background: #f8f8f8;
+  border-left: 5px dotted rgba(0,0,0,.1);
+  box-shadow: 0 0 0 5px #f8f8f8;
   padding: 1em;
-  background-color: #ffffcc;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
+  margin: 1em 5px;
 }
 
-.tape{
-  display: block;
-  background-color: #ccb;
-  opacity: 0.2;
-  transform: rotate(3deg);
-  width: 40%;
-  height: 35px;
-  margin: -2em auto 0 auto;
-  border-left: 3px dotted rgba(0,0,0,.1);
-  border-right: 3px dotted rgba(0,0,0,.1);
-}
-
-.tape-box p{
+.loose-leaf p{
   margin: 0;
   padding: 0;
 }
