--- a/stylesheet.css
+++ b/stylesheet.css
@@ -112,12 +112,14 @@ header {
 
 /*aboutのデザイン*/
 .loose-leaf{
+  float: right;
   background: #fff0f5;
   border-left: 5px dotted rgba(0,0,0,.1);
   box-shadow: 0 0 0 1px #d2b48c;
   padding: 1em;
   margin: 1em 5px;
   width: 50%;
+  height: 350px;
 }
 
 .loose-leaf p{
