--- a/stylesheet.css
+++ b/stylesheet.css
@@ -137,4 +137,45 @@ footer {
 
 
 /*コンタクトフォーム*/
+.btn-social-icon-instagram {
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  color: #2e6ca5;
+  font-size: 25px;
+  text-decoration: none;
+}
 
+.btn-social-icon-instagram:hover {
+  color:#668ad8;
+  transition: .5s;
+}
+
+.btn-social-icon-instagram__square {
+  border-radius: 13px;
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  font-size: 35px;
+  line-height: 50px;
+  background: linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
+  overflow: hidden
+}
+
+.btn-social-icon-instagram__square:before {
+  content: '';
+  position: absolute;
+  top: 23px;
+  left: -18px;
+  width: 60px;
+  height: 60px;
+  background: -webkit-radial-gradient(#ffdb2c 10%, rgba(255, 105, 34, 0.65) 55%, rgba(255, 88, 96, 0) 70%);
+  background: radial-gradient(#ffdb2c 10%, rgba(255, 105, 34, 0.65) 55%, rgba(255, 88, 96, 0) 70%);
+}
+
+.btn-social-icon-instagram__square .fa-instagram {
+  color:white;
+  line-height: 50px;
+  position: relative;
+  z-index: 2}
